# sedona-db

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: dev.yml  packaging.yml  python-wheels.yml  python.yml  r-extended.yml  r.yml  rust-gpu.yml  rust.yml
c/sedona-libgpuspatial/: CMakeLists.txt  build.rs
c/sedona-libgpuspatial/libgpuspatial/: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  NOTICE  README.md  vcpkg.json
c/sedona-libgpuspatial/libgpuspatial/benchmark/: run_queries.cu
c/sedona-libgpuspatial/libgpuspatial/cmake/: get_rmm.cmake  nvcuda_compile_module.cmake  rapids_config.cmake
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/geom/: box.cuh  geometry_collection.cuh  geometry_type.cuh  line_segment.cuh  line_string.cuh  multi_line_string.cuh  multi_point.cuh  multi_polygon.cuh  orientation.cuh  point.cuh  polygon.cuh  ray_crossing_counter.cuh
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/index/: geometry_grouper.hpp  object_pool.hpp  relate_engine.cuh  spatial_joiner.cuh  spatial_joiner.hpp  streaming_joiner.hpp
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/index/detail/: launch_parameters.h  rt_engine.hpp  sbt_record.h
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/loader/: device_geometries.cuh  geometry_segment.h  parallel_wkb_loader.h  wkb_loader.h
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/relate/: im.cuh  predicate.cuh  relate.cuh
c/sedona-libgpuspatial/libgpuspatial/include/gpuspatial/utils/: array_view.h  cuda_utils.h  dd.h  derived_atomic_functions.h  doubledouble.h  exception.h  floating_point.h  gpu_timer.hpp  helpers.h  launcher.h  logger.hpp  markers.hpp  mem_utils.hpp  morton_code.h  pinned_vector.h  queue.h  queue_view.h  stopwatch.h  thread_pool.h  type_traits.h
c/sedona-libgpuspatial/libgpuspatial/src/: gpuspatial_c.cc  relate_engine.cu  spatial_joiner.cu
c/sedona-libgpuspatial/libgpuspatial/src/index/: optix_spatial_index.cu  relate_engine.cu  rt_engine.cpp  spatial_joiner.cu
c/sedona-libgpuspatial/libgpuspatial/src/index/shaders/: box_query_backward.cu  multipolygon_point_query.cu  point_query.cu  polygon_point_query.cu
c/sedona-libgpuspatial/libgpuspatial/src/rt/: rt_engine.cpp
c/sedona-libgpuspatial/libgpuspatial/src/rt/shaders/: box_query_backward.cu  box_query_forward.cu  config_shaders.cmake  multipolygon_point_query.cu  point_query.cu  polygon_point_query.cu  ray_params.h  shader_config.h  shader_id.hpp
c/sedona-libgpuspatial/libgpuspatial/test/: CMakeLists.txt  array_stream.cc  array_stream_test.cc  c_wrapper_test.cc  gpuspatial_testing.hpp  joiner_test.cu  loader_test.cu  main.cc  related_test.cu  test_common.hpp
c/sedona-libgpuspatial/libgpuspatial/test/data/: gen_points.py  sample_data.py
c/sedona-libgpuspatial/libgpuspatial/test/data/cities/: Makefile
c/sedona-libgpuspatial/libgpuspatial/test/data/countries/: Makefile
c/sedona-libgpuspatial/src/: lib.rs  libgpuspatial.rs
dev/release/: rat_exclude_files.txt
python/sedonadb/: Cargo.toml
rust/sedona/: Cargo.toml
rust/sedona-spatial-join/: Cargo.toml
rust/sedona-spatial-join-gpu/: Cargo.toml  README.md
rust/sedona-spatial-join-gpu/src/: build_data.rs  config.rs  exec.rs  gpu_backend.rs  lib.rs  stream.rs  stream.rs.backup
rust/sedona-spatial-join-gpu/tests/: gpu_functional_test.rs  integration_test.rs
rust/sedona-spatial-join/src/: exec.rs  index.rs  lib.rs  stream.rs
rust/sedona/src/: context.rs
